# mycroft

./: .gitignore  AGENTS.md  CLAUDE.md  DOMAIN.md  PROJECT_RULES.md  README.md  TIKTOC.md  _MANIFEST.md  book.md  enrichment-log.md  metadata.yaml  outline.md  package-lock.json  package.json  session-handoff.md  status.md
.ai/: manifest.yaml
.github/: copilot-instructions.md
chapters/: 00-frontmatter.md  00-introduction.md  01-the-fluency-trap.md  02-chapter-02.md  02-the-reallocation-principle.md  03-chapter-03.md  03-the-verified-finance-data-contract.md  04-two-customers.md  05-chapter-05.md  05-verifying-finance-evidence.md  06-monthly-variance-pack.md  07-subledger-to-gl-reconciliation-triage.md  08-daily-cash-position-and-liquidity-watch.md  09-close-flux-analysis-and-balance-sheet-review.md  10-budget-request-normalizer-and-challenge-pack.md  10-chapter-10.md  11-control-evidence-completeness-checker.md  12-ap-ar-exception-and-aging-workbench.md  13-cash-forecast-variance-explainer.md  14-pbc-request-tracker-and-audit-evidence-binder.md  15-revenue-contract-and-billing-exception-triage.md  16-the-build-and-the-honest-run.md  97-fundamental-themes.md  98-appendix-best-practices.md  99-back-matter.md
conductor/: ai-news-sentiment-agent.md  ai-talent-intelligence-agent.md  comparativeanalysisagent.md  contradiction-detection-agent.md  finance-literacy-bot-chatbot-w-memory.md  finance-literacy-bot-rag-chatbot.md  financial-literacy-bot-knowledge-base.md  (+37 more)
pantry/Mycroft-main/Core_Components/news_monitoring_agent/webserver/: dockerfile  pyproject.toml  utils.py
(+1164 files in other folders)
